# balloon-locator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
exe/: lab5
images/: README.md
opencv-lecture/: CMakeLists.txt  main.cc  main.cc~  main_post-lecture.cc  main_pre-lecture.cc
src/: CMakeLists.txt  README.md  balloonfinder.cc  balloonfinder.h  imagemetadata.cc  imagemetadata.h  main.cc  main_full.cc  main_post-lecture.cc  main_post-lecture2.cc  main_pre-lecture.cc  main_test.cc  sensorparams.cc  sensorparams.h  structurecomputer.cc  structurecomputer.h  structurecomputer_A.cc
